--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ a {
 .link {
     display: flex;
     color: #e5e7eb;
-    font-size: 18px;<link href='http://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
+    font-size: 18px;
     gap:18px;
 
 }
@@ -119,6 +119,36 @@ button{
     font-style: normal;
     padding-right: 50px;
 }
-.q {
+.sign {
+    display: flex;
+    background-color: #3282f6;
+    color: #e5e7eb;
+    width: 900px;
+    justify-content: space-evenly;
+    height: 130px;
+    border-radius: 8px;
+    align-items: center;
+    margin: auto ;
+    margin-top: 100px;
+    margin-bottom: 100px;
     
+}
+.call {
+    font-size: 24px;
+    font-weight: 900;
+}
+.ss {
+    font-size: small;
+    font-weight: 400;
+    font-size: 18px;
+}
+.footer {
+    background-color: #1f2937;
+    color: #e5e7eb;
+    font-size: 18px;
+    text-align: center;
+    padding: 30px;
+}
+.sign button {
+    border: 2px solid #e5e7eb;
 }
